Resolve Path import conflict for Java 21 build